# MoneyMind

./: .pre-commit-config.yaml  README.md  TaskFile.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  create-requirements.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scriptje.py
backend/app/: __init__.py
backend/app/application/commands/: __init__.py  categorize_transaction.py  create_budget.py  create_transaction.py  delete_transaction.py  import_transactions.py  update_transaction.py
backend/app/application/dtos/: __init__.py  auth_dto.py  insight_dto.py  transaction_dto.py
backend/app/application/handlers/: categorize_transaction_handler.py  create_transaction_handler.py  delete_transaction_handler.py  update_transaction_handler.py
backend/app/application/interfaces/: __init__.py  services.py
backend/app/application/queries/: __init__.py  get_insights.py  get_monthly_summary.py  search_transactions.py  search_transactions_handler.py
backend/app/application/services/: transaction_service.py
backend/app/domain/entities/: __init__.py  account.py  budget.py  category.py  entity.py  transaction.py  user.py
backend/app/domain/events/: __init__.py  domain_event.py  transaction_events.py
backend/app/domain/repositories/: __init__.py  account_repository.py  budget_repository.py  category_repository.py  interfaces.py  transaction_repository.py  user_repository.py
backend/app/domain/services/: __init__.py  categorization_service.py  insight_service.py
backend/app/domain/specifications/: __init__.py  transaction_specs.py
backend/app/domain/value_objects/: __init__.py  account_id.py  account_type.py  budget_id.py  budget_period.py  category_id.py  currency.py  date_range.py  money.py  transaction_id.py  user_id.py
backend/app/infrastructure/: auth_service.py
backend/app/infrastructure/dependency_injection/: __init__.py  container.py
backend/app/infrastructure/persistence/: __init__.py  database.py
backend/app/infrastructure/persistence/models/: __init__.py  account.py  base.py  budget.py  category.py  transaction.py  user.py
backend/app/infrastructure/persistence/repositories/: account_repository.py  budget_repository.py  category_repository.py  transaction_repository.py  user_repository.py
backend/app/presentation/: main.py
backend/app/presentation/controllers/: auth_controller.py  transaction_controller.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_transaction_endpoints.py
backend/tests/unit/: test_auth_controller.py  test_auth_service.py  test_transaction_handlers.py  test_transaction_repository.py  test_transaction_service.py  test_user_entity.py  test_user_repository.py
backend/tools/: pyproject_to_requirements.py
docs/: PROJECT_CASE.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  (+3 more)
(+16 files in other folders)
